# AutoSwitch-EC200U

./: CMakeLists.txt  build_all.bat  build_all.sh
components/: CMakeLists.txt
components/apploader/src/: core_export.list
components/appstart/src/: app_start.c
components/bootloader/: CMakeLists.txt
components/bootloader/boot/: boot2_start_8910.c
components/cfw/include/: cfw.h
components/chip/: chip_8910.cmake
components/driver/: CMakeLists.txt
components/driver/include/: drv_sdmmc_imp.h  drv_usb.h
components/driver/src/: rda_fb.c
components/firmwareupdate/include/: fupdate.h
components/kernel/include/: osi_pipe.h
components/ql-application/: CMakeLists.txt  ql_app_feature_config.cmake  ql_app_feature_config.h.in
components/ql-application/AutoSwitch/: CMakeLists.txt  Uart.c  audio.c  call.c  embedded_flash.c  fota_ftp.c  mqtt.c  network.c  phonebook.c  power.c  rtc.c  sms.c  target.config
components/ql-application/AutoSwitch/inc/: CMakeLists.txt  Defination.h  audio.h  call.h  embedded_flash.h  fota_ftp.h  mqtt.h  network.h  phonebook.h  power.h  rtc.h  sms.h  uart.h
components/ql-application/ethernet/: CMakeLists.txt  ethernet_http_demo.c
components/ql-application/init/: CMakeLists.txt  ql_init.c
components/ql-application/lcd/: lcd_demo.c
components/ql-application/nw/: nw_demo.c
components/ql-application/rtc/: ql_rtc_demo.c
components/ql-application/sdmmc/: ql_sdmmc_demo.c
components/ql-application/tts/: tts_demo2.c
components/ql-application/usb/: usb_demo.c
components/ql-application/voice_call/: voice_call_demo.c
components/ql-application/wifi/: CMakeLists.txt  wifi_demo.c
components/ql-application/wifi/fc41d/src/: ql_wifi_spi.c
components/ql-application/wifi/inc/: wifi_demo_macro.cmake  wifi_demo_macro.h.in
components/ql-kernel/: CMakeLists.txt  Kconfig
components/ql-kernel/drivers/: quec_customer_cfg.c  quec_internal_cfg.c
components/ql-kernel/inc/: QuecPrjName.h  ql_api_common.h  ql_api_datacall.h  ql_api_ethernet.h  ql_api_fota.h  (+30 more)
tools/: modemgen.py
(+142 files in other folders)
